@@ -135,6 +135,11 @@
 			#include "XMEGA/A3BU_XPLAINED/Buttons.h"
 		#elif ((BOARD == BOARD_USB2AX) || (BOARD == BOARD_USB2AX_V3))
 			#include "AVR8/USB2AX/Buttons.h"
+		#elif ((BOARD_MICROPENDOUS_32U2) || (BOARD == BOARD_MICROPENDOUS_A) || \
+		       (BOARD == BOARD_MICROPENDOUS_1) || (BOARD == BOARD_MICROPENDOUS_2) || \
+		       (BOARD == BOARD_MICROPENDOUS_3) || (BOARD == BOARD_MICROPENDOUS_4) || \
+		       (BOARD == BOARD_MICROPENDOUS_DIP))
+			#include "AVR8/MICROPENDOUS/Buttons.h"
 		#else
 			#include "Board/Buttons.h"
 		#endif
